fix(padding-base-vertical): ensure select boxes are not cut off
Previously the global padding vertical variable was set to 10px - this
was causing the buttons and input fields to be too large and made the
select input fields cut off the bottom of their text. This has been
changed to 6px which is the default height set in bootstrap.

--- a/variables.less
+++ b/variables.less
@@ -81,7 +81,7 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     10px;
+@padding-base-vertical:     6px;
 @padding-base-horizontal:   14px;
 
 @padding-large-vertical:    18px;
